--- a/tables.html
+++ b/tables.html
@@ -260,7 +260,7 @@
       <div class="text-xl font-bold mb-8">Weather App</div>
       <div class="w-full">
         <ul class="space-y-6">
-          <a href="dashbaords.html" class="text-center block bg-gray-700 py-2 rounded-lg cursor-pointer">Dashboard</a>
+          <a href="index.html" class="text-center block bg-gray-700 py-2 rounded-lg cursor-pointer">Dashboard</a>
           <a href="tables.html" class="text-center block bg-blue-300 py-2 rounded-lg cursor-pointer">Tables</a>
         </ul>
       </div>
