--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>Weather App Dashboard</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
   <style>
     .picture{
       width: 10%;
@@ -17,64 +18,65 @@
 <body class="bg-gray-100">
 
   <!-- Main Container -->
-  <div class="flex min-h-screen">
+  <div class="flex min-h-screen animate__animated animate__fadeIn">
 
     <!-- Sidebar -->
-    <aside class="w-1/4 bg-gray-800 text-white flex flex-col items-center py-10">
+    <aside class="w-1/4 bg-gray-800 text-white flex flex-col items-center py-10 animate__animated animate__slideInLeft">
       <div class="text-xl font-bold mb-8">Weather App</div>
       <div class="w-full">
         <ul class="space-y-6">
-          <a href="dashbaords.html" class="text-center block  bg-blue-300 py-2 rounded-lg cursor-pointer">Dashboard</a>
-          <a href="tables.html" class="text-center block bg-gray-700 py-2 rounded-lg cursor-pointer">Tables</a>
+          <a href="index.html" class="text-center block bg-blue-300 py-2 rounded-lg cursor-pointer transform transition duration-300 hover:scale-105">Dashboard</a>
+          <a href="tables.html" class="text-center block bg-gray-700 py-2 rounded-lg cursor-pointer transform transition duration-300 hover:scale-105">Tables</a>
         </ul>
       </div>
     </aside>
-
+  
     <!-- Main Content -->
-    <main class="flex-1 p-6">
+    <main class="flex-1 p-6 animate__animated animate__fadeInRight">
       <!-- Top Navigation -->
       <div class="flex justify-between items-center mb-6">
         <input id="cityInput" type="text" placeholder="Search for a city" value="Islamabad" class="px-4 py-2 w-3/4 border rounded-lg">
-        <button id="searchBtn" class="bg-blue-300 p-2 rounded-md ">Search</button>
-        <img class="rounded-full picture bg-gray-300" src="pfp2.jpg" alt="display picture">
+        <button id="searchBtn" class="bg-blue-300 p-2 rounded-md transform transition duration-300 hover:scale-105">Search</button>
+        <img class="rounded-full picture bg-gray-300 transform transition duration-300 hover:scale-105" src="pfp2.jpg" alt="display picture">
       </div>
-
+  
       <!-- Weather Data & Charts -->
       <div class="grid grid-cols-2 gap-6">
-
+  
         <!-- Weather Data Section -->
-        <div id="weatherWidget" class="col-span-2 bg-white p-6 rounded-lg shadow-md">
+        <div id="weatherWidget" class="col-span-2 bg-white p-6 rounded-lg shadow-md animate__animated animate__fadeInUp">
           <h2 class="text-2xl font-semibold mb-4">Weather Data Based on City</h2>
           <div id="weatherInfo" class="text-lg"></div>
           <img id="weatherIcon" src="" alt="Weather Icon">
         </div>
-
+  
         <!-- Vertical Bar Chart -->
-        <div class="bg-white p-4 rounded-lg shadow-md text-center">
+        <div class="bg-white p-4 rounded-lg shadow-md text-center transform transition duration-300 hover:scale-105">
           <h3 class="text-xl font-medium mb-2">Vertical Bar Chart</h3>
           <canvas id="barChart"></canvas>
         </div>
-
+  
         <!-- Doughnut Chart -->
-        <div class="bg-white p-4 rounded-lg shadow-md text-center">
+        <div class="bg-white p-4 rounded-lg shadow-md text-center transform transition duration-300 hover:scale-105">
           <h3 class="text-xl font-medium mb-2">Doughnut Chart</h3>
           <canvas id="doughnutChart"></canvas>
         </div>
-
+  
         <!-- Line Chart -->
-        <div class="bg-white p-4 rounded-lg shadow-md text-center">
+        <div class="bg-white p-4 rounded-lg shadow-md text-center transform transition duration-300 hover:scale-105">
           <h3 class="text-xl font-medium mb-2">Line Chart</h3>
           <canvas id="lineChart"></canvas>
         </div>
-
+  
         <!-- 5-Day Forecast Section -->
-        <div id="forecastGrid" class="col-span-2 grid grid-cols-5 gap-4 bg-white p-6 rounded-lg shadow-md">
+        <div id="forecastGrid" class="col-span-2 grid grid-cols-5 gap-4 bg-white p-6 rounded-lg shadow-md animate__animated animate__fadeInUp">
           <h3 class="text-xl font-medium mb-4 col-span-5 text-center">5-Day Weather Forecast</h3>
         </div>
-
+  
       </div>
     </main>
   </div>
+  
 
   <script>
     const apiKey = 'aac092cb6bdc6178cfe3373bca55cc4d'; 
